Pontoon: Update Korean (ko) localization of Yik
Co-authored-by: 줍 <brianjo94@naver.com>

--- a/ko/lrsk_gov_var_civics_govs_l_english.yml
+++ b/ko/lrsk_gov_var_civics_govs_l_english.yml
@@ -35,7 +35,7 @@ lrsk_gov_var_civic_elected_clergy_desc: ""
 civic_tooltip_lrsk_gov_var_civic_elected_clergy_effects: ""
 lrsk_gov_var_civic_ascetic_virtues: ""
 lrsk_gov_var_civic_ascetic_virtues_desc: "이 문화의 종교적 신념은 엄격한 식이요법과 운동을 요구함으로 정신만큼이나 몸을 돕습니다."
-lrsk_gov_var_civic_republicanism: ""
+lrsk_gov_var_civic_republicanism: "공화주의"
 lrsk_gov_var_civic_republicanism_desc: ""
 lrsk_gov_var_civic_republicanism_oli: ""
 lrsk_gov_var_civic_republicanism_oli_desc: ""
