Pontoon: Update Korean (ko) localization of Yik
Co-authored-by: 줍 <brianjo94@naver.com>

--- a/ko/lrsk_gov_var_civics_govs_l_english.yml
+++ b/ko/lrsk_gov_var_civics_govs_l_english.yml
@@ -36,13 +36,13 @@ civic_tooltip_lrsk_gov_var_civic_elected_clergy_effects: ""
 lrsk_gov_var_civic_ascetic_virtues: ""
 lrsk_gov_var_civic_ascetic_virtues_desc: "이 문화의 종교적 신념은 엄격한 식이요법과 운동을 요구함으로 정신만큼이나 몸을 돕습니다."
 lrsk_gov_var_civic_republicanism: "공화주의"
-lrsk_gov_var_civic_republicanism_desc: ""
+lrsk_gov_var_civic_republicanism_desc: "이 사회는 공공의 선에 봉사하는 좋은 인격을 가진 사람들에게 가장 큰 미덕이 있다고 믿습니다."
 lrsk_gov_var_civic_republicanism_oli: ""
 lrsk_gov_var_civic_republicanism_oli_desc: ""
-lrsk_gov_var_civic_utilitarian_planning: ""
-lrsk_gov_var_civic_utilitarian_planning_desc: ""
+lrsk_gov_var_civic_utilitarian_planning: "공리주의 계획"
+lrsk_gov_var_civic_utilitarian_planning_desc: "정부는 자원 배분을 합리적으로 계산하여 최대의 사람들이게 최대의 이익을 주는것을 목표로 합니다."
 
-#civic_tooltip_lrsk_gov_var_civic_utilitarian_planning_effects:0 "Pop Food Upkeep: §G-5%§!\nShip, Building, and District Upkeep: §G-2.5%§!"
+#civic_tooltip_lrsk_gov_var_civic_utilitarian_planning_effects:0 "인구의 식량 유지비: §G-5%§!\n함선, 건물그리고 구역 유지비: §G-2.5%§!"
 
 lrsk_gov_var_civic_siege_mentality: ""
 lrsk_gov_var_civic_siege_mentality_desc: ""
