Pontoon: Update Korean (ko) localization of Yik
Co-authored-by: 줍 <brianjo94@naver.com>

--- a/ko/lrsk_gov_var_civics_govs_l_english.yml
+++ b/ko/lrsk_gov_var_civics_govs_l_english.yml
@@ -33,7 +33,7 @@
 lrsk_gov_var_civic_elected_clergy: ""
 lrsk_gov_var_civic_elected_clergy_desc: ""
 civic_tooltip_lrsk_gov_var_civic_elected_clergy_effects: ""
-lrsk_gov_var_civic_ascetic_virtues: ""
+lrsk_gov_var_civic_ascetic_virtues: "금욕은 미덕이다"
 lrsk_gov_var_civic_ascetic_virtues_desc: "이 문화의 종교적 신념은 엄격한 식이요법과 운동을 요구함으로 정신만큼이나 몸을 돕습니다."
 lrsk_gov_var_civic_republicanism: "공화주의"
 lrsk_gov_var_civic_republicanism_desc: "이 사회는 공공의 선에 봉사하는 좋은 인격을 가진 사람들에게 가장 큰 미덕이 있다고 믿습니다."
@@ -56,8 +56,8 @@ lrsk_gov_var_civic_universal_sovereignty_desc: ""
 
 #civic_tooltip_lrsk_gov_var_civic_universal_sovereignty_effects:0 "Subject Integration Influence Cost: §G-10%§!\nSubject Integration Time: §G-20%§!"
 
-lrsk_gov_var_civic_workers_councils: ""
-lrsk_gov_var_civic_workers_councils_desc: ""
+lrsk_gov_var_civic_workers_councils: "노동자 위원회"
+lrsk_gov_var_civic_workers_councils_desc: "노동조합, 민주적 작업장 및 협동조합은 시민 사회의 필수적인 부분이며 정부의 필수적인 부분입니다."
 civic_tooltip_lrsk_gov_var_civic_workers_councils_effects: ""
 lrsk_gov_var_civic_supremacist_demagoguery: ""
 lrsk_gov_var_civic_supremacist_demagoguery_desc: ""
