Pontoon: Update Korean (ko) localization of Yik
Co-authored-by: 줍 <brianjo94@naver.com>

--- a/ko/lrsk_gov_var_civics_govs_l_english.yml
+++ b/ko/lrsk_gov_var_civics_govs_l_english.yml
@@ -58,8 +58,8 @@ lrsk_gov_var_civic_universal_sovereignty_desc: ""
 
 lrsk_gov_var_civic_workers_councils: "노동자 위원회"
 lrsk_gov_var_civic_workers_councils_desc: "노동조합, 민주적 작업장 및 협동조합은 시민 사회의 필수적인 부분이며 정부의 필수적인 부분입니다."
-civic_tooltip_lrsk_gov_var_civic_workers_councils_effects: ""
-lrsk_gov_var_civic_supremacist_demagoguery: ""
+civic_tooltip_lrsk_gov_var_civic_workers_councils_effects: "$WORKERS$과 $SPECIALISTS$ 들의 £political_power£ §YPolitical Power§!가 §Y50%§! 증가하고 각각§Y12.5%§!씩 증가합니다./n( §YDecent Conditions§! 생활수준과, 종족 취급에 따라 달라질 수 있습니다)./n/n"
+lrsk_gov_var_civic_supremacist_demagoguery: "우월주의 선동가"
 lrsk_gov_var_civic_supremacist_demagoguery_desc: ""
 lrsk_gov_var_civic_enlightened_liberalism: ""
 lrsk_gov_var_civic_enlightened_liberalism_desc: ""
