Pontoon: Update Korean (ko) localization of Yik
Co-authored-by: 줍 <brianjo94@naver.com>

--- a/ko/lrsk_gov_var_civics_govs_l_english.yml
+++ b/ko/lrsk_gov_var_civics_govs_l_english.yml
@@ -47,11 +47,11 @@ lrsk_gov_var_civic_utilitarian_planning_desc: "정부는 자원 배분을 합리
 lrsk_gov_var_civic_siege_mentality: "공성 정신"
 lrsk_gov_var_civic_siege_mentality_desc: "정부의 방위 정책은 국민의 적대적인 외부인에 대한 우려와 공격적인 전쟁에 대한 열정 부족으로 인해 요새화에 중점을 둡니다."
 
-#civic_tooltip_lrsk_gov_var_civic_utilitarian_planning_effects:0 "Pop Food Upkeep: §G-5%§!\nShip, Building, and District Upkeep: §G-2.5%§!"
+#civic_tooltip_lrsk_gov_var_civic_utilitarian_planning_effects:0 "인구 식량 유지비: §G-5%§!\n함선, 건물, 구역 유지비: §G-2.5%§!"
 
 lrsk_gov_var_civic_cult_of_personality: "개인주의 문화"
 lrsk_gov_var_civic_cult_of_personality_desc: "통치자는 존경받을 가치가있는 특별하고 강력하고 영웅적인 인물으로 간주됩니다."
-lrsk_gov_var_civic_universal_sovereignty: ""
+lrsk_gov_var_civic_universal_sovereignty: "주권"
 lrsk_gov_var_civic_universal_sovereignty_desc: ""
 
 #civic_tooltip_lrsk_gov_var_civic_universal_sovereignty_effects:0 "Subject Integration Influence Cost: §G-10%§!\nSubject Integration Time: §G-20%§!"
@@ -60,13 +60,13 @@ lrsk_gov_var_civic_workers_councils: "노동자 위원회"
 lrsk_gov_var_civic_workers_councils_desc: "노동조합, 민주적 작업장 및 협동조합은 시민 사회의 필수적인 부분이며 정부의 필수적인 부분입니다."
 civic_tooltip_lrsk_gov_var_civic_workers_councils_effects: "$WORKERS$과 $SPECIALISTS$ 들의 £political_power£ §YPolitical Power§!가 §Y50%§! 증가하고 각각§Y12.5%§!씩 증가합니다./n( §YDecent Conditions§! 생활수준과, 종족 취급에 따라 달라질 수 있습니다)./n/n"
 lrsk_gov_var_civic_supremacist_demagoguery: "우월주의 선동가"
-lrsk_gov_var_civic_supremacist_demagoguery_desc: ""
-lrsk_gov_var_civic_enlightened_liberalism: ""
-lrsk_gov_var_civic_enlightened_liberalism_desc: ""
-lrsk_gov_var_civic_business_lobby: ""
-lrsk_gov_var_civic_business_lobby_desc: ""
-lrsk_gov_var_civic_chivalry: ""
-lrsk_gov_var_civic_chivalry_desc: ""
+lrsk_gov_var_civic_supremacist_demagoguery_desc: "정부는 일반적인 편견과 공포를 유도하기 위해 국민을 위협적인 말들로 조종하고 공통된 편견과 두려움에 호소한다./n"
+lrsk_gov_var_civic_enlightened_liberalism: "계몽자유주의"
+lrsk_gov_var_civic_enlightened_liberalism_desc: "이 사회는 진정한 산업 대표들을 위한 문화를 가지며, 개인 재산권, 개인 기업, 진보하는 지식, 기술 혁신을 중요시합니다./n"
+lrsk_gov_var_civic_business_lobby: "예산 절약"
+lrsk_gov_var_civic_business_lobby_desc: "이 사회는 쓰래기 줄이기와 운영 효율성을 그 무엇보다 중시한다."
+lrsk_gov_var_civic_chivalry: "기사도"
+lrsk_gov_var_civic_chivalry_desc: "지배 계급 문화는 이상적인 무력과 명예로운 행동으로 정의됩니다."
 lrsk_gov_var_civic_chivalry_aristo: ""
 lrsk_gov_var_civic_chivalry_aristo_desc: ""
 civic_tooltip_lrsk_gov_var_civic_chivalry_effects: ""
