Pontoon: Update Korean (ko) localization of Yik
Co-authored-by: 줍 <brianjo94@naver.com>

--- a/ko/lrsk_gov_var_civics_govs_l_english.yml
+++ b/ko/lrsk_gov_var_civics_govs_l_english.yml
@@ -82,23 +82,23 @@ lrsk_gov_var_civic_institutionalized_collectivism: "제도화된 집단주의"
 lrsk_gov_var_civic_institutionalized_collectivism_desc: "정부는 경제 협력과 공정성의 기준을 확보하여 기본적인 필요를 충족시키기 위해 산업과 생산라인을 제어합니다."
 lrsk_gov_var_civic_direct_revelation: "직접 계시"
 lrsk_gov_var_civic_direct_revelation_desc: "이 사회의 종교문화는 개인적으로 겪은 신성한 경험으로부터 오는 통찰력을 중요시한다."
-civic_tooltip_lrsk_gov_var_civic_direct_revelation_effects: ""
-lrsk_gov_var_civic_royal_absolutism: ""
-lrsk_gov_var_civic_royal_absolutism_desc: ""
-lrsk_gov_var_civic_public_works: ""
-lrsk_gov_var_civic_public_works_desc: ""
-lrsk_gov_var_civic_imperial_economy: ""
-lrsk_gov_var_civic_imperial_economy_desc: ""
-lrsk_gov_var_civic_colonial_fiefs: ""
-lrsk_gov_var_civic_colonial_fiefs_desc: ""
-lrsk_gov_var_civic_automated_indolence: ""
-lrsk_gov_var_civic_automated_indolence_desc: ""
+civic_tooltip_lrsk_gov_var_civic_direct_revelation_effects: "행성에 §Y25§! £pop£ Pops당 §Y1§! £job_lrsk_gov_var_job_hedge_preacher£ §Y$job_lrsk_gov_var_job_hedge_preacher$ Job§!을 줍니다. $job_lrsk_gov_var_job_hedge_preacher_effect_desc$\n가끔씩, 신앙을 바꾸며 꽤 많은 수의 (거의 항상 유리한) 효과를 발생시키는§Y야만 인종§! 이 행성에 생길 수 있습니다. §Y야만인종§! 들은 £job_lrsk_gov_var_job_hedge_preacher£ $job_lrsk_gov_var_job_hedge_preacher_plural$를 추가시킵니다.\n\n"
+lrsk_gov_var_civic_royal_absolutism: "절대왕정"
+lrsk_gov_var_civic_royal_absolutism_desc: "짐이 곧 국가이며, 내 뜻이 곧 법이다."
+lrsk_gov_var_civic_public_works: "공공사업들"
+lrsk_gov_var_civic_public_works_desc: "공공 고용 제도는 많은 업무에 노동력을 이용할 수 있게 한다."
+lrsk_gov_var_civic_imperial_economy: "제국 경제"
+lrsk_gov_var_civic_imperial_economy_desc: "이 제국은 종속국을 가차없이 착취합니다."
+lrsk_gov_var_civic_colonial_fiefs: "식민지 봉토"
+lrsk_gov_var_civic_colonial_fiefs_desc: "군주는 새로운 세계를 식민지화할 만큼 충분히 용감한 사람들에게 토지 소유권을 기꺼이 부여할 것이다."
+lrsk_gov_var_civic_automated_indolence: "자동화된 나태"
+lrsk_gov_var_civic_automated_indolence_desc: "산업 혁명 초기에 이 사회는 '기계가 일을 할 수 있도록' 최대한 허용함으로써 노동과 불평등의 문제를 다루기로 결정했고, 사회 구조와 기술적 초점은 그에 맞게 조정되었다."
 
 # Special Tooltips
 
-lrsk_gov_var_civic_tooltip_oli_dic: ""
-lrsk_gov_var_civic_tooltip_dem_dic: ""
-lrsk_gov_var_civic_tooltip_not_xenophile_or_not_militarist: ""
+lrsk_gov_var_civic_tooltip_oli_dic: "§Y과두정치§! 나 §Y독재정§! 통치 체제 가지고 있음"
+lrsk_gov_var_civic_tooltip_dem_dic: "§Y민주정§! 나 §Y독재정§! 통치체제 가지고 있음"
+lrsk_gov_var_civic_tooltip_not_xenophile_or_not_militarist: " §Y외계인 선호§! 도 전혀 아니며§Y군국주의§! 도 전혀 아님"
 lrsk_gov_var_civic_tooltip_not_egalitarian_pacifist: ""
 
 ## Test Civics (values should never appear to players) 
