Pontoon: Update Korean (ko) localization of Yik
Co-authored-by: 줍 <brianjo94@naver.com>

--- a/ko/lrsk_gov_var_civics_govs_l_english.yml
+++ b/ko/lrsk_gov_var_civics_govs_l_english.yml
@@ -113,17 +113,17 @@ lrsk_gov_var_civic_test_2_desc: ""
 lrsk_gov_var_civic_hive_planetmind_creativity: "행성지능적 창의성"
 lrsk_gov_var_civic_hive_planetmind_creativity_desc: "군체의식의 이해 안에 있는 모든 행성은 스스로 반자동 설계를 할 수 있음."
 civic_tooltip_lrsk_gov_var_civic_hive_planetmind_creativity_desc_effects: "£amenities_no_happiness£ §Y$PLANET_AMENITIES_TITLE$§!와 £crime£ §Y$PLANET_CRIME_NO_HAPPINESS_TITLE$§!를 올려주는  £building£ §Y행성지능 구조물§!을 지을수 있게 해줍니다.£job_lrsk_gov_var_job_planetmind_overseer£ §Y$job_lrsk_gov_var_job_planetmind_overseer_plural$§! 또한 더해줍니다. \n\n$job_lrsk_gov_var_job_planetmind_overseer_effect_desc$.\n\n"
-lrsk_gov_var_civic_hive_caste_quickening: "카스트제도 가속화"
-lrsk_gov_var_civic_hive_caste_quickening_desc: ""
-lrsk_gov_var_civic_hive_builder_caste: ""
-lrsk_gov_var_civic_hive_builder_caste_desc: ""
-lrsk_gov_var_civic_hive_warrior_caste: ""
-lrsk_gov_var_civic_hive_warrior_caste_desc: ""
-lrsk_gov_var_civic_hive_royal_caste: ""
-lrsk_gov_var_civic_hive_royal_caste_desc: ""
-lrsk_gov_var_civic_hive_reclamation_pools: ""
-lrsk_gov_var_civic_hive_reclamation_pools_desc: ""
-lrsk_gov_var_civic_hive_boundless_spite: ""
+lrsk_gov_var_civic_hive_caste_quickening: "계급제 가속화"
+lrsk_gov_var_civic_hive_caste_quickening_desc: "군체의식은 드론의 재능을 배양하기 위해 각별히 신경을 쓰고 그 목적에 맞게 창의적으로 재설계한다."
+lrsk_gov_var_civic_hive_builder_caste: "일개미급"
+lrsk_gov_var_civic_hive_builder_caste_desc: "군체의식은 모든 작업을 할 수 있는 드론을 생산합니다."
+lrsk_gov_var_civic_hive_warrior_caste: "병정개미급"
+lrsk_gov_var_civic_hive_warrior_caste_desc: "군체의식의 생존을 위협하는 경쟁에서 군체의식은 전투용 드론을 생산하는대에 모든 자원을 쏟아붇는다."
+lrsk_gov_var_civic_hive_royal_caste: "귀족급"
+lrsk_gov_var_civic_hive_royal_caste_desc: "군체의식의 성장과 발전을 더욱 확장하기 위하여, 군체의식은 생산적이고 창의적인 활동에서 다른 드론들을 지휘할 수 있는 매우 지능적인 드론을 생산한다."
+lrsk_gov_var_civic_hive_reclamation_pools: "재조립 웅덩이"
+lrsk_gov_var_civic_hive_reclamation_pools_desc: "모든 사망한 드론은 군체의 다음 세대를 유지하기 위해 재활용된다."
+lrsk_gov_var_civic_hive_boundless_spite: "무한한 악의"
 lrsk_gov_var_civic_hive_boundless_spite_desc: ""
 lrsk_gov_var_civic_hive_void_affinity: ""
 lrsk_gov_var_civic_hive_void_affinity_desc: ""
