Pontoon: Update Korean (ko) localization of Yik
Co-authored-by: 줍 <brianjo94@naver.com>

--- a/ko/lrsk_gov_var_civics_govs_l_english.yml
+++ b/ko/lrsk_gov_var_civics_govs_l_english.yml
@@ -135,20 +135,20 @@ lrsk_gov_var_civic_hive_inquisitive_bent: "호기심 많은 군체"
 lrsk_gov_var_civic_hive_inquisitive_bent_desc: "군체의식은 우주에 대한 깊고 참을 수 없는 호기심을 가지고 있습니다."
 lrsk_gov_var_civic_hive_big_picture_thinker: "큰그림을 그리는 자"
 lrsk_gov_var_civic_hive_big_picture_thinker_desc: "군체의식의 계획은 광범위하고 야심만만합니다. 가장 거대한 사건에서도 큰 그림을 쉽게 볼 수 있습니다."
-lrsk_gov_var_civic_hive_analgesic_stoicism: ""
-lrsk_gov_var_civic_hive_analgesic_stoicism_desc: ""
-lrsk_gov_var_civic_hive_domineering_expectations: ""
-lrsk_gov_var_civic_hive_domineering_expectations_desc: ""
-lrsk_gov_var_civic_hive_unending_bloom: ""
-lrsk_gov_var_civic_hive_unending_bloom_desc: ""
-lrsk_gov_var_civic_hive_benign_overmind: ""
-lrsk_gov_var_civic_hive_benign_overmind_desc: ""
-lrsk_gov_var_civic_hive_gestalt_extroversion: ""
-lrsk_gov_var_civic_hive_gestalt_extroversion_desc: ""
-lrsk_gov_var_civic_hive_frenzy: ""
-lrsk_gov_var_civic_hive_frenzy_desc: ""
-lrsk_gov_var_civic_hive_vigorous_introversion: ""
-lrsk_gov_var_civic_hive_vigorous_introversion_desc: ""
+lrsk_gov_var_civic_hive_analgesic_stoicism: "협력적인 무리"
+lrsk_gov_var_civic_hive_analgesic_stoicism_desc: "최소한 간단한 작업에서는, 백지장도 맞들면 낫다는 말이 맞습니다. 군체의식처럼 모든이들이 함께할경우, 더더욱 그럴것입니다."
+lrsk_gov_var_civic_hive_domineering_expectations: "지배적 기대치"
+lrsk_gov_var_civic_hive_domineering_expectations_desc: "군체의식은 자신의 드론과 같이 외교적으로 구속된 노동자들을 가르치지 않을 이유를 찾지 못했습니다."
+lrsk_gov_var_civic_hive_unending_bloom: "끝나지않는 개화"
+lrsk_gov_var_civic_hive_unending_bloom_desc: "모든 생명체의 목적은 성장이며 최대한 확장하는것은 가장 확실히 생존을 보장해주는 수단이다. 그러므로 군체의식은 전 은하에 퍼지기위해 집착한다."
+lrsk_gov_var_civic_hive_benign_overmind: "자애로운 마음씨"
+lrsk_gov_var_civic_hive_benign_overmind_desc: "군체의식은 자신을 섬기는 이들에게 친절한 어버이 신과 같으며, 섬기는 이들은 군체의식의 이해하기 어려운 정신을 자랑스러워합니다."
+lrsk_gov_var_civic_hive_gestalt_extroversion: "외향적 성격의 게슈탈트"
+lrsk_gov_var_civic_hive_gestalt_extroversion_desc: "군체의식이 다루는 저울 위에서, 외교는 우정이기에 사교적인 군체의식은 항상 새로운 친구들을 찾고 있습니다."
+lrsk_gov_var_civic_hive_frenzy: "극대노"
+lrsk_gov_var_civic_hive_frenzy_desc: "충격적인 경험이 이 군체의식이 전쟁을 준비할때 맹렬하게 반응하게 만든 듯 합니다."
+lrsk_gov_var_civic_hive_vigorous_introversion: "극단적 내향성"
+lrsk_gov_var_civic_hive_vigorous_introversion_desc: "군체의식은 드론의 신체적 경험에 집착하고 신체적, 감각적 능력 개발을 관심사안으로 두고있습니다."
 
 ### Machine Intelligence
 
