--- a/ko/lrsk_gov_var_civics_govs_l_english.yml
+++ b/ko/lrsk_gov_var_civics_govs_l_english.yml
@@ -28,7 +28,7 @@
 ### Singleton
 
 
-# Civics
+# 사회제도
 
 lrsk_gov_var_civic_elected_clergy: "선출된 성직자"
 lrsk_gov_var_civic_elected_clergy_desc: "이 사회의 종교에서 지역 사제는 종교단체 내에서 선출됩니다. 교리는 다양하며 여러 해석에 개방적입니다."
